# projectMM

./: .coderabbit.yaml  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  library.json
.claude/: settings.local.cleaned.json
.github/workflows/: nightly.yml  release.yml  test.yml
docs/: architecture-light.md  architecture.md  building.md  coding-standards.md  decisions.md  gettingstarted.md  performance.md  plan.md  testing.md
docs/backlog/: README.md  backlog-core.md  backlog-light.md  backlog-mixed.md  backlog.md  folder-structure-proposal.md  inmp441-mic-plan.md  installer-3layer-plan.md  leddriver-analysis-bottom-up.md  leddriver-analysis-top-down.md  (+12 more)
esp32/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.16mb  sdkconfig.defaults.esp32p4-eth  sdkconfig.defaults.esp32p4-eth-wifi  sdkconfig.defaults.esp32s3-n16r8  sdkconfig.defaults.esp32s3-n8r8  sdkconfig.defaults.esp32s31  sdkconfig.defaults.esp32s3_n16r8  sdkconfig.defaults.eth  sdkconfig.defaults.eth-spi  sdkconfig.defaults.olimex_gw  sdkconfig.defaults.wt32eth01
esp32/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp  wifi_credentials.example.h
scripts/: MoonDeck.md  moondeck.py  moondeck_config.json
src/: main.cpp
test/: CMakeLists.txt  scenario_runner.cpp  test_artnet_packet.cpp  test_blend_map.cpp  test_buffer.cpp  test_color.cpp  test_correction.cpp  test_drivers_container.cpp  test_effects_zero_grid.cpp  test_extrude.cpp  test_filesystem_persistence.cpp  test_fire.cpp  test_grid_layout.cpp  test_improv_frame.cpp  test_layers_container.cpp  test_layout_toggle_cycle.cpp  test_layouts_container.cpp  test_lifecycle_propagation.cpp  test_mapping_lut.cpp  test_metaballs.cpp  test_mirror.cpp  test_module_factory.cpp  test_moonmodule.cpp  test_movechild.cpp  test_network_module.cpp  test_noise.cpp  test_particles.cpp  test_phase_animation.cpp  test_pipeline.cpp  test_plasma.cpp  test_preview_driver.cpp  test_rainbow.cpp  test_replacechild.cpp  test_scheduler_unique_names.cpp  test_stateless_effects.cpp  test_system_module.cpp
test/core/: test_controls.cpp  test_http_server.cpp  test_moonmodule.cpp  test_platform.cpp  test_scheduler.cpp
test/device/: device_RmtLoopback.cpp
test/js/: config-ops.test.mjs  improv-frame.test.mjs  install-logic.test.mjs  installer-eth-only.test.mjs  installer-firmware-merge.test.mjs  installer-s31-webflash.test.mjs  moondeck-push-board.test.mjs  semver.test.mjs
test/light/: test_artnet_send.cpp  test_blend_map.cpp  test_buffer.cpp  test_driver_group.cpp  test_grid_layout.cpp  test_layer.cpp  test_layout_group.cpp  test_mapping.cpp  test_mirror_modifier.cpp  test_noise.cpp  test_noise_effect.cpp  test_pixel.cpp  test_rainbow.cpp  test_rotate_modifier.cpp  test_wheel_layout.cpp
test/python/: test_build_esp32_s31.py  test_compute_version.py  test_improv_frame.py  test_installer_manifests.py  test_verify_version.py
test/scenarios/: base-pipeline.json  control-change.json  grid-resize.json  mdns-toggle.json  memory-1to1.json  memory-lut.json  mirror.json  preview-detail.json
test/scenarios/core/: scenario_DevicesModule_scan.json  scenario_MoonModule_control_change.json  scenario_NetworkModule_eth_reconfigure.json  scenario_NetworkModule_mdns_toggle.json
test/scenarios/light/: scenario_AllEffects_grid_sizes.json  scenario_Audio_mutation.json  scenario_Driver_mutation.json  scenario_GridLayout_grid_sizes.json  scenario_GridLayout_resize.json  scenario_Layer_base_pipeline.json  scenario_Layer_buildup.json  scenario_Layer_memory_1to1.json  scenario_Layers_composition.json  scenario_Layouts_mutation.json  scenario_MirrorModifier_memory_lut.json  scenario_MirrorModifier_pipeline.json  scenario_MoonLiveEffect_controls.json  scenario_MoonLiveEffect_livescript.json  scenario_MultiplyModifier_memory_lut.json  scenario_MultiplyModifier_pipeline.json  scenario_PreviewDriver_detail.json  scenario_modifier_chain.json  scenario_modifier_swap.json  scenario_perf_full.json  scenario_perf_light.json
test/unit/core/: conditional_controls.h  unit_BoardModule.cpp  unit_Buffer.cpp  unit_Color.cpp  unit_Control_apply_absent_key.cpp  unit_Control_list.cpp  unit_DeviceIdentify.cpp  unit_DevicesModule_ageout.cpp  unit_DevicesModule_discovery.cpp  unit_DevicesModule_hue.cpp  unit_FilesystemModule_persistence.cpp  unit_FirmwareUpdateModule.cpp  unit_HttpServerModule_apply.cpp  unit_ImprovFrame.cpp  unit_ImprovOpReassembler.cpp  unit_JsonUtil_parse.cpp  unit_MappingLUT.cpp  unit_ModuleFactory.cpp  unit_MoonModule.cpp  unit_MoonModule_control_change_gate.cpp  unit_MoonModule_lifecycle.cpp  unit_MoonModule_movechild.cpp  unit_MoonModule_replacechild.cpp  unit_NetworkModule.cpp  unit_NetworkModule_ethernet.cpp  unit_Scheduler_unique_names.cpp  unit_Sort.cpp  unit_SystemModule.cpp  unit_WledPacket.cpp  unit_crc.cpp  unit_math8.cpp  unit_moonlive_compiler.cpp  unit_moonlive_fill.cpp  unit_moonlive_ir.cpp  unit_noise.cpp  unit_platform_clock.cpp  unit_sanitizeHostname.cpp
test/unit/light/: unit_ArtNetReceiveEffect.cpp  unit_ArtNetSendDriver_no_alloc_in_loop.cpp  unit_ArtNetSendDriver_packet.cpp  unit_AudioBands.cpp  unit_AudioLevel.cpp  unit_AudioModule.cpp  unit_BlendMap.cpp  unit_CheckerboardEffect.cpp  unit_CheckerboardModifier.cpp  unit_Coord3D.cpp  unit_Correction.cpp  unit_DemoReelEffect.cpp  unit_DistortionWavesEffect.cpp  unit_Drivers_container.cpp  unit_Drivers_firstLedRgb.cpp  unit_Drivers_firstOutputRgb.cpp  unit_FireEffect.cpp  unit_GameOfLifeEffect.cpp  unit_GridLayout.cpp  unit_GyroDriver.cpp  unit_HueDriver.cpp  unit_Layer_extrude.cpp  unit_Layer_live_modifier.cpp  unit_Layer_modifier_chain.cpp  unit_Layer_persistence.cpp  unit_Layer_phase_animation.cpp  unit_Layer_sparse_mapping.cpp  unit_Layer_zero_grid.cpp  unit_Layers_container.cpp  unit_Layouts_container.cpp  unit_Layouts_mutation.cpp  unit_Layouts_toggle_cycle.cpp  unit_LcdLedDriver.cpp  unit_LcdLedEncoder.cpp  unit_MetaballsEffect.cpp  unit_MirrorModifier.cpp  unit_MultiplyModifier.cpp  unit_NetworkReceiveEffect.cpp  unit_NetworkReceiveEffect_protocols.cpp  unit_NetworkSendDriver_no_alloc_in_loop.cpp  (+22 more)
(+507 files in other folders)
